--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ehu.eus.chismosas.mastodonfx/ehu.eus.chismosas.mastodonfx.presentation.HelloApplication
+                            <mainClass>ehu.eus.chismosas.mastodonfx/ehu.eus.chismosas.mastodonfx.presentation.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
