--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ehu.eus.chismosas</groupId>
+    <groupId>eus.ehu.chismosas</groupId>
     <artifactId>MastodonFX</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>MastodonFX</name>
@@ -70,7 +70,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ehu.eus.chismosas.mastodonfx/ehu.eus.chismosas.mastodonfx.presentation.MainApplication
+                            <mainClass>eus.ehu.chismosas.mastodonfx.presentation.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
