Added Jsoup dependency

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>bigbone-rx</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.4</version>
+        </dependency>
     </dependencies>
 
     <build>
