Lenguage errors solved

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -19,8 +19,8 @@ Explore=Explore
 Bookmarks=Bookmarks
 Favourites=Favourites
 Theme\ selector\:=Theme selector:
-DARK=DARK
-LIGHT=LIGHT
+Dark=DARK
+Light=LIGHT
 Lenguage\:=Lenguage:
 Profile\ settings\:=Profile settings:
 Change\ your\ username=Change your username
@@ -32,3 +32,5 @@ Search=What are your thoughts?\
 What\ are\ your\ thoughts?=Post!
 What\ are\ your\ thoughts?=What are your thoughts?
 Post!=
+Insert\ account\ token=Insert account token
+Add\ new\ account=Add new account
