Fixed resource bundle after b1a1ef6c5d07384f70d4cef93079a58869e48b98

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -2,7 +2,7 @@ Choose\ an\ account\ to\ enter\ mastodon\ with=Choose an account to enter mastod
 Account\ token\:=Account token:
 Add\ account=Add account
 Choose\ account=Choose account
-MastodonFX\ -\ Account\ selection=MastodonFX - Account selection
++Chisme\ -\ Account\ selection=+Chisme - Account selection
 Remove\ account=Remove account
 Settings=Settings
 token\ status=token status
